test/corpus/kernighan.txt
================================================================================
fundamental objects
================================================================================
.PS
box "box"
move
line "line" above
move
arrow "arrow" above
move
circle "circle"
move
ellipse "ellipse"
move
arc "arc"
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))
      (attribute)))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))
      (attribute)))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))))
  (element
    (command_line)))
================================================================================
object sizes
================================================================================
.PS
box width 3 height 0.1; circle radius 0.1
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))))
  (element
    (command_line)))
================================================================================
motion
================================================================================
.PS
line up 1 right 2
arrow left 2
move left 0.1
line <-> down 1 "height " rjust
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))))
  (element
    (primitive)
    (attribute_list
      (attribute)
      (attribute
        (expr
          (number)))
      (attribute
        (text))
      (attribute)))
  (element
    (command_line)))
================================================================================
dashed lines
================================================================================
.PS
line right 5 dashed; move left 5 down .25; right
line right 5 dashed 0.25; move left 5 down .25; right
line right 5 dashed 0.5; move left 5 down .25; right
line right 5 dashed 1
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute)))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))))
  (element
    (direction))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))))
  (element
    (direction))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))))
  (element
    (direction))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))))
  (element
    (command_line)))
================================================================================
invisible objects
================================================================================
.PS
box invis "input"; arrow; box invis "output"
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute)
      (attribute
        (text))))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute)
      (attribute
        (text))))
  (element
    (command_line)))
================================================================================
text on lines
================================================================================
.PS
arrow "on top of"; move
arrow "above" "below"; move
arrow "above" above; move
arrow "below" below; move
arrow "above" "on top of" "below"
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))
      (attribute
        (text))))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))
      (attribute)))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))
      (attribute)))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))
      (attribute
        (text))
      (attribute
        (text))))
  (element
    (command_line)))
================================================================================
change default object sizes
================================================================================
.PS
boxwid = 0.1; boxht = 1
movewid = 0.2
box; move; box; move; box
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (assignment
      lhs: (variable)
      rhs: (expr
        (number))))
  (element
    (assignment
      lhs: (variable)
      rhs: (expr
        (number))))
  (element
    (assignment
      lhs: (variable)
      rhs: (expr
        (number))))
  (element
    (primitive))
  (element
    (primitive))
  (element
    (primitive))
  (element
    (primitive))
  (element
    (primitive))
  (element
    (command_line)))
================================================================================
object positions
================================================================================
.PS
box ht 0.2 wid 0.2 at 0,0 "1"
move right 0.5                  # or "move to 0.5,0"
box ht 0.2 wid 0.2 "2"
move right 0.5                  # or "move 0.5" or "move same"
box ht 0.2 wid 0.2 "3"
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))
      (attribute
        (position
          (position_not_place
            (expr_pair
              (expr
                (number))
              (expr
                (number))))))
      (attribute
        (text))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))))
  (comment)
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))
      (attribute
        (text))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))))
  (comment)
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))
      (attribute
        (text))))
  (element
    (command_line)))
================================================================================
object endpoints
================================================================================
.PS
"+" at 0,0
arc -> from 0.5,0 to 0,0.5
arc -> cw from 0,0 to 1,0.5
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive
      (text))
    (attribute_list
      (attribute
        (position
          (position_not_place
            (expr_pair
              (expr
                (number))
              (expr
                (number))))))))
  (element
    (primitive)
    (attribute_list
      (attribute)
      (attribute
        (position
          (position_not_place
            (expr_pair
              (expr
                (number))
              (expr
                (number))))))
      (attribute
        (position
          (position_not_place
            (expr_pair
              (expr
                (number))
              (expr
                (number))))))))
  (element
    (primitive)
    (attribute_list
      (attribute)
      (attribute)
      (attribute
        (position
          (position_not_place
            (expr_pair
              (expr
                (number))
              (expr
                (number))))))
      (attribute
        (position
          (position_not_place
            (expr_pair
              (expr
                (number))
              (expr
                (number))))))))
  (element
    (command_line)))
================================================================================
flat arc
================================================================================
.PS
arc -> cw from 0,0 to 2,0 rad 15
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute)
      (attribute)
      (attribute
        (position
          (position_not_place
            (expr_pair
              (expr
                (number))
              (expr
                (number))))))
      (attribute
        (position
          (position_not_place
            (expr_pair
              (expr
                (number))
              (expr
                (number))))))
      (attribute
        (expr
          (number)))))
  (element
    (command_line)))
================================================================================
object reference using labels
================================================================================
.PS
Box1: box
Box2: box
move to Box1
line from Box1 to Box2
move to Box1 up 0.1 right 0.2
move to Box1 + 0.2,0.1 # same as previous
line to Box1 - 0.5,0
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (label)
    (element
      (primitive)))
  (element
    (label)
    (element
      (primitive)))
  (element
    (primitive)
    (attribute_list
      (attribute
        (position
          (place
            (label))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (position
          (place
            (label))))
      (attribute
        (position
          (place
            (label))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (position
          (place
            (label))))
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (position
          (position_not_place
            (position
              (place
                (label)))
            (expr_pair
              (expr
                (number))
              (expr
                (number))))))))
  (comment)
  (element
    (primitive)
    (attribute_list
      (attribute
        (position
          (position_not_place
            (position
              (place
                (label)))
            (expr_pair
              (expr
                (number))
              (expr
                (number))))))))
  (element
    (command_line)))
================================================================================
reset label
================================================================================
.PS
Box1: Box1 + 1,1
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (label)
    (position_not_place
      (position
        (place
          (label)))
      (expr_pair
        (expr
          (number))
        (expr
          (number)))))
  (element
    (command_line)))
================================================================================
corners
================================================================================
.PS
B: box "B.c" ht 1 wid 1.5
   " B.e" at B.e ljust
   " B.ne" at B.ne ljust
   " B.se" at B.se ljust
   "B.s" at B.s below
   "B.n" at B.n above
   "B.sw " at B.sw rjust
   "B.w " at B.w rjust
   "B.nw " at B.nw rjust
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (label)
    (element
      (primitive)
      (attribute_list
        (attribute
          (text))
        (attribute
          (expr
            (number)))
        (attribute
          (expr
            (number))))))
  (element
    (primitive
      (text))
    (attribute_list
      (attribute
        (position
          (place
            (label)
            (corner))))
      (attribute)))
  (element
    (primitive
      (text))
    (attribute_list
      (attribute
        (position
          (place
            (label)
            (corner))))
      (attribute)))
  (element
    (primitive
      (text))
    (attribute_list
      (attribute
        (position
          (place
            (label)
            (corner))))
      (attribute)))
  (element
    (primitive
      (text))
    (attribute_list
      (attribute
        (position
          (place
            (label)
            (corner))))
      (attribute)))
  (element
    (primitive
      (text))
    (attribute_list
      (attribute
        (position
          (place
            (label)
            (corner))))
      (attribute)))
  (element
    (primitive
      (text))
    (attribute_list
      (attribute
        (position
          (place
            (label)
            (corner))))
      (attribute)))
  (element
    (primitive
      (text))
    (attribute_list
      (attribute
        (position
          (place
            (label)
            (corner))))
      (attribute)))
  (element
    (primitive
      (text))
    (attribute_list
      (attribute
        (position
          (place
            (label)
            (corner))))
      (attribute)))
  (element
    (command_line)))
================================================================================
position at
================================================================================
.PS
ellipse
ellipse ht .2 wid .3 with .se at 1st ellipse.nw
ellipse ht .2 wid .3 with .sw at 1st ellipse.ne
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))
      (attribute
        (path
          (relative_path
            (corner))))
      (attribute
        (position
          (place
            (nth_primitive
              (ordinal)
              (object_type))
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))
      (attribute
        (path
          (relative_path
            (corner))))
      (attribute
        (position
          (place
            (nth_primitive
              (ordinal)
              (object_type))
            (corner))))))
  (element
    (command_line)))
================================================================================
chop arrows
================================================================================
.PS
circlerad = 0.15; arrowhead = 7
circle "a"
circle "b" at 1st circle - (0.4, 0.6)
circle "c" at 1st circle + (0.4, -0.6)
arrow from 1st circle to 2nd circle chop
arrow from 1st circle to 3rd circle chop
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (assignment
      lhs: (variable)
      rhs: (expr
        (number))))
  (element
    (assignment
      lhs: (variable)
      rhs: (expr
        (number))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))
      (attribute
        (position
          (position_not_place
            (position
              (place
                (nth_primitive
                  (ordinal)
                  (object_type))))
            (expr_pair
              (expr_pair
                (expr
                  (number))
                (expr
                  (number)))))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))
      (attribute
        (position
          (position_not_place
            (position
              (place
                (nth_primitive
                  (ordinal)
                  (object_type))))
            (expr_pair
              (expr_pair
                (expr
                  (number))
                (expr
                  (expr
                    (number))))))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (position
          (place
            (nth_primitive
              (ordinal)
              (object_type)))))
      (attribute
        (position
          (place
            (nth_primitive
              (ordinal)
              (object_type)))))
      (attribute)))
  (element
    (primitive)
    (attribute_list
      (attribute
        (position
          (place
            (nth_primitive
              (ordinal)
              (object_type)))))
      (attribute
        (position
          (place
            (nth_primitive
              (ordinal)
              (object_type)))))
      (attribute)))
  (element
    (command_line)))
================================================================================
position a point between two other points
================================================================================
.PS
box
arrow right from 1/3 of the way between last box.ne and last box.se
arrow right from 2/3 <last box.ne, last box.se>
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute)
      (attribute
        (position
          (position_not_place
            (expr
              (expr
                (expr
                  (number)))
              (expr
                (number)))
            (position
              (place
                (nth_primitive
                  (object_type))
                (corner)))
            (position
              (place
                (nth_primitive
                  (object_type))
                (corner))))))))
  (element
    (primitive)
    (attribute_list
      (attribute)
      (attribute
        (position
          (position_not_place
            (expr
              (expr
                (expr
                  (number)))
              (expr
                (number)))
            (position
              (place
                (nth_primitive
                  (object_type))
                (corner)))
            (position
              (place
                (nth_primitive
                  (object_type))
                (corner))))))))
  (element
    (command_line)))
================================================================================
position a point between two other points with alternative syntax
================================================================================
.PS
A: ellipse
   ellipse ht .2 wid .3 with .se at 1st ellipse.nw
   ellipse ht .2 wid .3 with .sw at 1st ellipse.ne
   circle rad .05 at 0.5 <A.nw,A.c>
   circle rad .05 at 0.5 <A.ne,A.c>
   arc from 0.25 <A.w,A.e> to 0.75 <A.w,A.e>
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (label)
    (element
      (primitive)))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))
      (attribute
        (path
          (relative_path
            (corner))))
      (attribute
        (position
          (place
            (nth_primitive
              (ordinal)
              (object_type))
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))
      (attribute
        (path
          (relative_path
            (corner))))
      (attribute
        (position
          (place
            (nth_primitive
              (ordinal)
              (object_type))
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (position
          (position_not_place
            (expr
              (number))
            (position
              (place
                (label)
                (corner)))
            (position
              (place
                (label)
                (corner))))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (position
          (position_not_place
            (expr
              (number))
            (position
              (place
                (label)
                (corner)))
            (position
              (place
                (label)
                (corner))))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (position
          (position_not_place
            (expr
              (number))
            (position
              (place
                (label)
                (corner)))
            (position
              (place
                (label)
                (corner))))))
      (attribute
        (position
          (position_not_place
            (expr
              (number))
            (position
              (place
                (label)
                (corner)))
            (position
              (place
                (label)
                (corner))))))))
  (element
    (command_line)))
================================================================================
parameterize picture using expressions
================================================================================
.PS
a = 0.5; b = 1
box wid a ht b
ellipse wid a/2 ht 1.5*b
Box2: Box1 - (a/2, b/2)
foo = Box1.x               # the x coordinate of the center of Box1
bar = Box1.ne.y            # the y coordinate of the northeast corner of Box1
baz = Box1.wid             # the width of Box1
rad = 2nd last circle.rad  # the radius of the 2nd last circle
.PE
